Fix DelombokPass: isolated process, Java agent support, and package-aware True Root discovery for JDK 21/25 compatibility.